--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,20 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		 <!--mysql数据库驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!--mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
