--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
   port: 8888
+  servlet:
+     context-path: /zyl
+  
 spring:
   #数据库连接配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/flowershop?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/flowershop?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: ZJ1125
 
