--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,15 @@ server:
      context-path: /zyl
 file:
   path: /fileUpload/**
+  adm: 
+    path: fileUpload\\adm\\
+    uploadPath: \\images\\adm
+  types: 
+    path: fileUpload\\types\\
+    uploadPath: \\images\\types
+  flower: 
+    path: fileUpload\\flower\\
+    uploadPath: \\images\\flower
 spring:
   #数据库连接配置
   datasource:
