后台--鲜花信息修改页面完成图片的可选择修改，但未完善 。鲜花库存查询添加

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ file:
   flower: 
     path: ..\fileUpload\flower\
     uploadPath: \images\flower
+  store: 
+    path: ..\fileUpload\store\
+    uploadPath: \images\store    
 spring:
   #数据库连接配置
   datasource:
