--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,14 @@ spring:
           starttls:
             enable: true
             required: true
+  redis:
+      # Redis数据库索引（默认为0）
+      database: 0
+      # Redis服务器地址
+      host: localhost
+      # Redis服务器连接端口
+      port: 6379
+      password: 123456
 #mybatis的相关配置
 mybatis:
   #mapper配置文件
@@ -51,4 +59,5 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    
+
+   
