--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,10 @@ file:
     uploadPath: \images\flower
   store: 
     path: ..\fileUpload\store\
-    uploadPath: \images\store    
+    uploadPath: \images\store  
+  user: 
+    path: ..\fileUpload\user\
+    uploadPath: \images\user        
 spring:
   #数据库连接配置
   datasource:
